--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "get2/a2uphp",
     "description": "PHP package to make App to User payment for Pi Network",
+    "version": "1.9.3",
     "require": {
         "guzzlehttp/guzzle": "^7.9",
         "soneso/stellar-php-sdk": "^1.2"
@@ -15,5 +16,7 @@
             "name": "Djedje SEWOVON",
             "email": "jesssewovon@gmail.com"
         }
-    ]
+    ],
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
