--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
             "email": "jesssewovon@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
